Add missing qt namespace in qthreadstorage.h

Wrap 'else QT_CONFIG(thread)' block in qthreadstorage.h with qt
namespace

Fixes: QTBUG-98085
Change-Id: Ica1817fa6beeaf9e4883edaa8738f042b29f0c5e
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit f6d210a0d32ce9e81a160bfb893342cb0a521f54)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>